# fileshare

./: .gitignore  README.md
src/linux/: CMakeLists.txt  LocalShare  cancellation.h  discovery.h  fileshare  fileshare.cpp  fileshare_gui.cpp  imgui.ini  receiver.h  sender.h  utils.h
src/windows/: fileshare.cpp  receiver.h  sender.h  utils.h
